# spartsi-deprecated-

./: readme.md
spartsi/: .gitignore  CMakeLists.txt  LICENSE
spartsi/dep/catch/: catch.hpp  run-tests.hpp
spartsi/src/builder/: tree-builder.cpp  tree-builder.hpp
spartsi/src/core/: strf.hpp  view-of.hpp
spartsi/src/langspec/: default.cpp  default.hpp  langspec.hpp
spartsi/src/node/: create.hpp  node.hpp
spartsi/src/parser/: parse.hpp  parsers.hpp
spartsi/src/parser/binary/: buffer.hpp  parser.cpp  parser.hpp
spartsi/src/parser/impl/: comment.hpp  node_begin.hpp  node_end.hpp  parsers.hpp  tree_begin.hpp  tree_end.hpp  util.cpp  util.hpp
spartsi/src/parser/impl/attr/: attr.hpp
spartsi/src/parser/impl/comment/: comment.hpp
spartsi/src/parser/impl/node/: node-begin.hpp  node-end.hpp  node_begin.hpp  node_end.hpp
spartsi/src/parser/impl/ref-attr/: attr-declare.hpp  attr-define.hpp
spartsi/src/parser/impl/ref-node/: node-decl-def.hpp  ref-node-end.hpp
spartsi/src/parser/impl/tree/: tree-begin.hpp  tree-end.hpp  tree_begin.hpp  tree_end.hpp
spartsi/src/parser/text/: parse.hpp  parser.hpp
spartsi/src/parser/text/impl/: parsers.hpp  util.cpp
spartsi/src/parser/text/impl/attr/: attr.hpp
spartsi/src/parser/text/impl/comment/: comment.hpp
spartsi/src/parser/text/impl/node/: node-begin.hpp  node-end.hpp
spartsi/src/parser/text/impl/ref-attr/: attr-declare.hpp  (+1 more)
spartsi/test/: main.cpp
spartsi/test/builder/: linked_trees.cpp  multiline-args.cpp  ref-attrs.cpp  ref-nodes.cpp  ref_attrs.cpp  sample.cpp  simplified-sample-from-treestructinfo-website.cpp
spartsi/test/node/: node-basic-test.cpp  node-children-test.cpp  node-test.cpp
spartsi/test/parser/impl/: comment.cpp  node_begin.cpp  node_end.cpp  tree_begin.cpp  tree_end.cpp
spartsi/test/parser/impl/attr/: attr.cpp
spartsi/test/parser/impl/comment/: comment.cpp
spartsi/test/parser/impl/integration/: attrs.cpp  commented-tree.cpp  ref-attrs.cpp  ref-nodes-and-ref-attrs.cpp  ref-nodes.cpp  tree-with-nodes.cpp  tree_with_nodes.cpp
spartsi/test/parser/impl/node/: node-begin.cpp  node-end.cpp  node_begin.cpp  node_end.cpp  ref-node-end.cpp
spartsi/test/parser/impl/ref-attr/: attr-declare.cpp  attr-define.cpp
spartsi/test/parser/impl/ref-node/: ref-node-decl-def.cpp
spartsi/test/parser/impl/tree/: tree-begin.cpp  tree-end.cpp  tree_begin.cpp  tree_end.cpp
(+4 files in other folders)
